# defi_dashboard

./: Cargo.toml  README.md
avro_data/: query_results.avro
schemas/: uniswap_trade_schema.json
src/: main.rs
src/api/: client.rs  helper.rs  models.rs
