[package]
name = "defi_data_pipeline"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "write_avro"
path = "src/bin/write_avro.rs"

[[bin]]
name = "read_avro"
path = "src/bin/read_avro.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
csv = "1.1"
anyhow = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5.4"
apache-avro = "0.15"